# SIMP

./: README.md  Simp.cabal  ex1.imp  ex2.imp  ex3.imp  ex4.imp  ex5.imp  ex6.imp  stack.yaml
app/: Main.hs
src/: Ast.hs  Compile.hs  Eval.hs  EvalZ3.hs  Interp.hs  Lexer.x  Parser.y  Symtab.hs
