name:                Simp
version:             0.1.0.0
synopsis:            Solver-aided IMP
-- description:
homepage:            
license:             MIT
license-file:        LICENSE
author:              Alexander Bagnall
maintainer:          ab667712@ohio.edu
copyright:           2017 Alexander Bagnall
category:            Programming Languages
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ast Eval Interp Lexer Parser Symtab Compile EvalZ3
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , array
                     , z3
  default-language:    Haskell2010

executable Simp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Simp
                     , array
                     , z3
  default-language:    Haskell2010
  build-tools:         alex
                     , happy

test-suite Simp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Simp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bagnalla/SIMP
